[package]
name = "wikipedia_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde = "1.0.151"
select = "*"
rocket = "0.5.0-rc.2"
axum = "0.6.1"
tokio = "1.23.0"
